# concrete-edge-rs

./: Cargo.toml  README.md  flake.nix  player_params.toml
assets/: Scene.glb  level0.blend  level0.blend1  registry.json
assets/levels/: World.glb
assets/shaders/: debug_material.wgsl
src/: main.rs  player.rs  util.rs
src/player/: animation.rs  camera.rs  ground_animation.rs  mod.rs  physics.rs  rewind.rs  rig.rs
