[package]
name = "conrete-edge-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.2", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.24.0"
bevy_framepace = "0.16.0"
bevy_gltf_components = "0.5.1"
bevy_registry_export = "0.3.1"
bevy_xpbd_3d = "0.4.2"
leafwing-input-manager = "0.13.3"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
