[package]
name = "conrete-edge-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
avian3d = "0.2"
bevy = { version = "0.15" }
bevy-inspector-egui = "0.28"
bevy_framepace = "0.18"
blenvy = { git = "https://github.com/jwright159/Blenvy", branch = "main" }
leafwing-input-manager = "0.16"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
